Import of RJBS/MooseX-Singleton-0.05 from CPAN.
gitpan-cpan-distribution: MooseX-Singleton
gitpan-cpan-version:      0.05
gitpan-cpan-path:         RJBS/MooseX-Singleton-0.05.tar.gz
gitpan-cpan-author:       RJBS
gitpan-cpan-maturity:     released

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,11 @@
 Revision history for Perl extension MooseX-Singleton
 
+0.05 2008-02-03
+		- avoid re-BUILD-ing existing singleton objects
+
 0.04 2008-01-27
 		- exception when ->new called with args and instance already init'd (rjbs)
-		- added ->initialize method to remove any ambiguity with ->new
+		- added ->initialize method to remove any ambiguity with ->new (rjbs)
 
 0.03 2007-12-16
     - reimplementation as a metaclass (Sartak)
