--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 Revision history for Perl extension MooseX-Singleton
 
+0.07 2008-03-07
+	- bump Moose dep to 0.37 because that's when we got make_immutable (Sartak)
+
 0.06 2008-03-05
     - singleton objects were broken when made_immutable (Dave Rolsky)
 
