--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     MooseX::Singleton - turn your Moose class into a singleton
 
 VERSION
-    Version 0.06, released 05 Mar 08
+    Version 0.07, released 07 Mar 08
 
 SYNOPSIS
         package MyApp;
@@ -63,7 +63,7 @@ AND PATCHES FROM
     Dave Rolsky <autarch@urth.org>
 
 COPYRIGHT AND LICENSE
-    Copyright 2007 Shawn M Moore.
+    Copyright 2007, 2008 Shawn M Moore.
 
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
