Import of DROLSKY/MooseX-Singleton-0.11 from CPAN.
gitpan-cpan-distribution: MooseX-Singleton
gitpan-cpan-version:      0.11
gitpan-cpan-path:         DROLSKY/MooseX-Singleton-0.11.tar.gz
gitpan-cpan-author:       DROLSKY
gitpan-cpan-maturity:     released

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 Revision history for Perl extension MooseX-Singleton
 
+0.11 2008-09-05
+    - Fixed to work with Moose 0.57. Fixes RT #39013. Reported by Jon Swartz (Dave Rolsky)
+	
 0.10 2008-09-01
     - No code changes, just a stable release to go with Moose 0.56 release (Dave Rolsky)
 	
