--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 Revision history for Perl extension MooseX-Singleton
 
+0.13 2008-12-08
+    - Fixed to work with Moose 0.63
+
 0.12 2008-09-20
     - Fixed to work with Moose 0.58
 	
