--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     MooseX::Singleton - turn your Moose class into a singleton
 
 VERSION
-    Version 0.08, released 24 May 08
+    Version 0.15
 
 SYNOPSIS
         package MyApp;
