--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,10 @@
 Revision history for Perl extension MooseX-Singleton
 
+0.18 2009-06-21
+    - Changes to work Moose 0.82 (Dave Rolsky)	
+	
 0.17 2009-04-24
-		- Add ClassName->_clear_instance. (hdp)
+    - Add ClassName->_clear_instance. (hdp)
 
 0.16 2009-04-24
     - Changes to keep constructor inlining working with latest Moose &
