Import of SARTAK/MooseX-Singleton-0.19 from CPAN.
gitpan-cpan-distribution: MooseX-Singleton
gitpan-cpan-version:      0.19
gitpan-cpan-path:         SARTAK/MooseX-Singleton-0.19.tar.gz
gitpan-cpan-author:       SARTAK
gitpan-cpan-maturity:     released

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 Revision history for Perl extension MooseX-Singleton
 
+0.19 2009-07-09
+    - Remove ambiguity about copyright holder (Sartak)
+
 0.18 2009-06-21
     - Changes to work Moose 0.82 (Dave Rolsky)	
 	
