--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 Revision history for Perl extension MooseX-Singleton
 
+0.20 2009-09-11
+    - Converted this extension to use roles rather than metaclass
+      subclasses. This means it will cooperate with other extensions on CPAN,
+      like MooseX::StrictConstructor, etc. (Dave ROlsky)
+
 0.19 2009-07-09
     - Remove ambiguity about copyright holder (Sartak)
 
