--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,14 @@
 Revision history for Perl extension MooseX-Singleton
 
+0.21 2009-09-12
+    - Various modules in this class were trying to load the old pre-0.20
+      classes, which have all been renamed. Tests passed if you had 0.19 or
+      earlier installed, but failed for fresh installations.  (Dave Rolsky)
+
 0.20 2009-09-11
     - Converted this extension to use roles rather than metaclass
       subclasses. This means it will cooperate with other extensions on CPAN,
-      like MooseX::StrictConstructor, etc. (Dave ROlsky)
+      like MooseX::StrictConstructor, etc. (Dave Rolsky)
 
 0.19 2009-07-09
     - Remove ambiguity about copyright holder (Sartak)
