Import of DROLSKY/MooseX-Singleton-0.24 from CPAN.
gitpan-cpan-distribution: MooseX-Singleton
gitpan-cpan-version:      0.24
gitpan-cpan-path:         DROLSKY/MooseX-Singleton-0.24.tar.gz
gitpan-cpan-author:       DROLSKY
gitpan-cpan-maturity:     released

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 Revision history for Perl extension MooseX-Singleton
 
+0.24 2010-07-15
+    - Require Moose 0.94+. (Dave Rolsky)
+
 0.23 2010-07-15
     - Use modern Moose APIs to avoid warnings from the next Moose. (Dave
       Rolsky)
