--- a/Changes
+++ b/Changes
@@ -1,6 +1,12 @@
 Revision history for Perl extension MooseX-Singleton
 
-{{NEXT}}
+0.27 2011-05-19
+
+    - Fix 006-cooperative.t - this test requires MooseX::StrictConstructor
+      0.16+ to pass with Moose 2.00+. Reported by Alexandr Ciornii. RT
+      #67965. (Dave Rolsky)
+
+0.26 2011-02-26
     - This module will now work with Moose 1.9900+, but it still works with
       older Moose as well. (Dave Rolsky)
 
