Import of KAARE/MooseX-Singleton-0.27 from CPAN.
gitpan-cpan-distribution: MooseX-Singleton
gitpan-cpan-version:      0.27
gitpan-cpan-path:         KAARE/MooseX-Singleton-0.27.tar.gz
gitpan-cpan-author:       KAARE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension MooseX-Singleton
 
+0.27 2011-12-04
+    - Fix RT Bug #46086, "name used only once" (Thanks chisel for the patch and
+      the test)
+
 0.27 2011-05-19
 
     - Fix 006-cooperative.t - this test requires MooseX::StrictConstructor
